--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 
 <!-- <app-ng-for-demo></app-ng-for-demo> -->
 <!-- <app-ng-if-demo></app-ng-if-demo> -->
+<!-- <app-ng-class-style-demo></app-ng-class-style-demo> -->
 
 <div class="courses">
   <app-course-card *ngFor="let course of courses;index as i" (courseSelected)="onCourseSelected($event)" [course]="course" [cardIndex]="i+1"></app-course-card>
