--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,3 +12,9 @@
     max-width: 400px;
     margin: 50px auto;
 }
+.demo{
+  font-size: 28px;
+  font-weight: 600;
+  text-align: center;
+  padding: 12px 0px;
+}
