angular local template querying in depth:

--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -1,6 +1,6 @@
 <div class="course-card" *ngIf="course" [ngClass]="cardClasses()">
   <div class="course-title" [ngStyle]="titleStyles()">
-    {{ cardIndex + " " + course.description }}
+    {{ cardIndex || '' + " " + course.description }}
   </div>
   <img
     width="300"
@@ -16,7 +16,7 @@
       <div class="category" *ngSwitchCase="'BEGINNER'">beginner</div>
       <div class="category" *ngSwitchCase="'INTERMEDIATE'">intermediate</div>
       <div class="category" *ngSwitchCase="'ADVANCED'">advanced</div>
-      <div class="category" *ngSwitchDefault="'All Levels'">beginner</div>
+      <!-- <div class="category" *ngSwitchDefault="'All Levels'">beginner</div> -->
     </div>
     {{ course.longDescription }}
   </div>
