--- a/src/app/pipe/pipe.component.html
+++ b/src/app/pipe/pipe.component.html
@@ -25,5 +25,10 @@
     </div>
     
     <!-- Keyvalue -->
+    <!-- <div>
+        <div *ngFor="let pair of employeeDetails | keyvalue">
+            {{pair.key}}: {{pair.value}}
+        </div>
+    </div> -->
 
 </div>
