--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,17 +5,41 @@
   />
 </div>
 
+<!-- pipe date -->
 <div class="demo">
-  <div>Start Date: {{startDate | date:'MM/dd/yyyy'}}</div>
-  <!-- pipe date -->
+  <div>Start Date: {{ startDate | date: "MM/dd/yyyy" }}</div>
 </div>
 <!-- <app-ng-for-demo></app-ng-for-demo> -->
 <!-- <app-ng-if-demo></app-ng-if-demo> -->
 <!-- <app-ng-class-style-demo></app-ng-class-style-demo> -->
 
-<!-- <div class="courses">
-  <app-course-card *ngFor="let course of courses;index as i" (courseSelected)="onCourseSelected($event)" [course]="course" [cardIndex]="i+1"></app-course-card>
-</div> -->
+<button (click)="onCourseEdited()">Edit Courses</button>
+<div class="courses">
+  <app-course-card *ngFor="let course of courses"
+  
+    (courseSelected)="onCourseSelected($event)"
+    [course]="course"
+   
+  ></app-course-card>
+</div>
+<!-- <div class="courses" #container>
+  <app-course-card #cardRef1
+  
+    (courseSelected)="onCourseSelected($event)"
+    [course]="courses[0]"
+   
+  ></app-course-card>
+</div>
+<div class="courses">
+  <app-course-card #cardRef2
+  
+    (courseSelected)="onCourseSelected($event)"
+    [course]="courses[1]"
+   
+  ></app-course-card>
+</div>
+ -->
+
 
 <!-- pipe -->
-<app-pipe></app-pipe>
+<!-- <app-pipe></app-pipe> -->
